--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
     <div class="chat" >
       
-      <iframe id="chat_embed" src="https://www.twitch.tv/embed/N01SEglobal/chat?parent=aural-podcast.github.io"> </iframe>
+      <iframe id="chat_embed" src="https://www.twitch.tv/embed/N01SEglobal/chat?parent=aural-n01se.github.io"> </iframe>
 
       <!--
 
