--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
 
         <div class="info-time" inicio="15:30" fin="16:00">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise/hoe.jpg" alt="">
           <div class="info-texto">
             <p>15:30 - 16:00</p>
             <h3>Putas Impresiones</h3>
@@ -137,7 +137,7 @@
         </div>
 
         <div class="info-time" inicio="16:00" fin="16:30">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise/1rapidito.jpg" alt="">
           <div class="info-texto">
             <p>16:00 - 16:30</p>
             <h3>1 rapidito</h3>
@@ -157,7 +157,7 @@
         </div>
 
         <div class="info-time" inicio="17:00" fin="17:30">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise/musicaQueSale.jfif" alt="">
           <div class="info-texto">
             <p>17:00 - 17:30</p>
             <h3>M&uacute;sica que sale m&aacute;s t&uacute;</h3>
@@ -257,13 +257,23 @@
           <br>
           <br>
           <br>
-          <p sound="#">MACA - El atributo ALT o etiqueta ALT es un atributo HTML para un texto que describe una imagen. 
+          <p sound="#">
+          Aural - Plataforma sonora experimental y radio de la Escuela T&eacute;cnica Superior de Arquitectura en UPM. @aural_podcast
           <br> 
           <br>
-          MACA - El atributo ALT o etiqueta ALT es un atributo HTML para un texto que describe una imagen.
+          La Hipoteca - Espacio autogestionado y multidisciplinar. Gestionado por Marta Badiola. @lahipoteca
           <br> 
           <br>
-          MACA - El atributo ALT o etiqueta ALT es un atributo HTML para un texto que describe una imagen.
+          N01se Global - Plataforma pluridisciplinar por y para artistas independientes. Comunidad en: @n01seglobal @n1ghtn01se @evilut10n
+          <br> 
+          <br>
+          Mujeres Opañel - ONG con acci&oacute;n social que ayuda mujeres en situaci&oacute;n de riesgo en Carabanchel. @mujeresopanel
+          <br> 
+          <br>
+          MACa - Master Universitario en Comunicaci&oacute;n Arquitect&oacute;nica de la ETSAM en la Universidad Polit&eacute;cnica de Madrid. @macaetsam
+          <br> 
+          <br>
+          Flor de Cuchillo - Estudio creativo formado por Mar&iacute;a Grau Piqu&eacute; y Mar&iacute;a Margo encuentra su trabajo en @flordecuchillo.estudio
         </p>
         </div>
     
