--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
         <div class="info-time" inicio="10:00" fin="10:45">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/lilith.jfif" alt="">
           <div class="info-texto">
             <p>10:00 - 10:45</p>
             <h3>somos Lilith</h3>
@@ -87,87 +87,87 @@
         </div>
 
         <div class="info-time" inicio="10:45" fin="11:30">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/chloe.jpg" alt="">
           <div class="info-texto">
             <p>10:45 - 11:30</p>
             <h3>chlo&eacute;.bb</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>Caf&eacute; con Chloe es un programa matutino en el que descubriremos m&uacute;sica brasile&ntilde;a de la mano de Chloe. B&uacute;scala en ig c&oacute;mo @chloe_conh</p></div>
           </div>
         </div>
 
         <div class="info-time" inicio="12:00" fin="12:50">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/navxja.jpg" alt="">
           <div class="info-texto">
             <p>12:00 - 12:50</p>
             <h3>NAVXJA</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>Navxja es el proyecto musical de Nao (@navxja) que describe como &quot;musiquita tierna para corazones rotos&quot; y desde luego que cura heartbreaks. No te dejar&aacute; indiferente pues derrite hasta el frio polar s&oacute;lo con con una guitarra y su voz. Su arte se refleja no s&oacute;lo en las melod&iacute;as de tintes dulces, sino en toda su expresi&oacute;n art&iacute;stica y visual donde convergen sus raices afrocolombianas mezcladas con sus experiencias de una vida madrile&ntilde;a, y enamora. Artista firmada por Snap! Clap! su ritmo creativo es digno de admirar con 4 EPs a sus espaldas y un documental en camino.</p></div>
           </div>
         </div>
 
         <div class="info-time" inicio="12:50" fin="13:40">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/megane.jpg" alt="">
           <div class="info-texto">
             <p>12:50 - 13:40</p>
             <h3>megane mercury</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>Artista no binaria multidisciplinar, Megane (@meganemercury) es una m&aacute;quina creativa. Desde fotograf&iacute;a y v&iacute;deo hasta la m&uacute;sica, sin olvidar la moda, sus v&iacute;as creativas nunca se agotan. Referente de la escena drag de Madrid, Megane lucha por la visbilidad de la comunidad negra y LGBTQIA+ de la que se rodea para trabajar y dar voz. Todo un ejemplo a seguir.</p></div>
           </div>
         </div>
 
         <div class="info-time" inicio="13:40" fin="14:30">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/fresis.png" alt="">
           <div class="info-texto">
             <p>13:40 - 14:30</p>
             <h3>freesismafia</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>Han llegado para quedarse, las due&ntilde;as del hip hop en Madrid, las Free Sis traen todos los puntos de vista a golpe de rima. Toda una sororidad y ejemplo de colaboraci&oacute;n en femenino y es que cada una tiene su estilo pero si lo que quieres son quieres barras te van a poner entre rejas. S&iacute;guelas en ig @freesismafia</p></div>
           </div>
         </div>
 
         <div class="info-time" inicio="15:30" fin="16:00">
-          <img class="info-imagen" src="img_noise/hoe.jpg" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/hoe.jpg" alt="">
           <div class="info-texto">
             <p>15:30 - 16:00</p>
             <h3>Putas Impresiones</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>Una reflexi&oacute;n sobre las primeras impresiones, las apariencias y las ideas preconcebidas, cuestiona nuestra capacidad de juicio y prejuicio, de la valoracion ignorante como primera reaccion y de la confrontacion, pero sin hogueras. Sus autores son: @alvarodelrio_ y @spongesilvia</p></div>
           </div>
         </div>
 
         <div class="info-time" inicio="16:00" fin="16:30">
-          <img class="info-imagen" src="img_noise/1rapidito.jpg" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/1rapidito.jpg" alt="">
           <div class="info-texto">
             <p>16:00 - 16:30</p>
             <h3>1 rapidito</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>Uno rapidito invitadxs es un programa radiof&oacute;nico de media hora de duraci&oacute;n a ojo de buen cubero. Lxs co-presentadorxs Mara jaqueMate (@beaklorea) y Javi puntodeNieves (@pelaeskines) escoger&aacute;n un tema de inter&eacute;s al rededor del cual habr&aacute; m&uacute;sica y tertulia. Traer&aacute;n varixs invitadxs que a colaci&oacute;n del tema tendr&aacute;n que elegir una canci&oacute;n y comentarla. Los temas escogidos por lxs anfitrionxs tocar&aacute;n pol&iacute;tica, religi&oacute;n, cultura popular, trascendencia y espiritualidad, y servir&aacute;n como catalizador para el crecimiento personal del radio-oyente. El objetivo es fichar por cadena cien pero de momento nos sirve con @aural_podcast. No te lo pierdas!</p></div>
           </div>
         </div>
 
         <div class="info-time" inicio="16:30" fin="17:00">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/karmen.jfif" alt="">
           <div class="info-texto">
             <p>16:30 - 17:00</p>
             <h3>Bleeding in my st4r</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>programa musical dedicado a drain gang (bladee, ecco2k y thaiboy digital), sadboys (yung lean, gud, yung sherman) y otros &lt;3 narrado por @k4rm3n_rubi0</p></div>
           </div>
         </div>
 
         <div class="info-time" inicio="17:00" fin="17:30">
-          <img class="info-imagen" src="img_noise/musicaQueSale.jfif" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/musicaQueSale.jfif" alt="">
           <div class="info-texto">
             <p>17:00 - 17:30</p>
             <h3>M&uacute;sica que sale m&aacute;s t&uacute;</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>musiquita que ha salido en el &uacute;ltimo mes comentada por your favourite local locutora @paula_saez. Edici&oacute;n especial mujeres</p></div>
           </div>
         </div>
 
         <div class="info-time" inicio="18:00" fin="18:50">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/raxet.jfif" alt="">
           <div class="info-texto">
             <p>18:00 - 18:50</p>
             <h3>raxet1 + jvliana</h3>
@@ -177,12 +177,12 @@
         </div>
 
         <div class="info-time" inicio="18:50" fin="19:40">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise - cuadrado/meQuieres.jpg" alt="">
           <div class="info-texto">
             <p>18:50 - 19:40</p>
             <h3>mequieres?</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>D&uacute;o formado por Irene Garry (@irenegarry) y Roc&iacute;o Llamazares (@rociollamazares), c&oacute;mo DJs amateurs estuvieron en nuestra primera fiesta N1GHT N01SE en Madrid y despu&eacute;s de un a&ntilde;o en activo vuelven a pinchar con nosotras. Desde entonces, Roc&iacute;o se ha estrenado en Twitch con TOMBOLO,un programa que promete traernos entrevistas muy interesantes desde su primer cap&iacute;tulo con Mar&iacute;a Blay e Irene fue seleccionada por @vibramahou en el concurso que lleva a artistas independientes nada m&aacute;s y nada menos que al Mad Cool.</p></div>
           </div>
         </div>
 
@@ -215,7 +215,7 @@
         <br>
         <br>
         <br>
-        >> DONATION
+        >> DONACIONES
         <br>
         <br>
         El evento solidario de las plataformas sonoras experimentales N01SE global y Aural por y para mujeres creativas y artistas independientes.
@@ -253,7 +253,7 @@
       <div class="about-info">
         <div id="about-info-expand"> 
           <br>
-          <p>>> ABOUT</p> 
+          <p>>> ORGANIZACI&Oacute;N</p> 
           <br>
           <br>
           <br>
