--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="title">
       <img class="logo-title" src="logos/purplenoise.png" alt="logo purplenoise" sound="#">
 
-      <h2 sound="#">Evento solidario 7M</h2>
+      <h2 sound="#">aural x n01se </h2>
 
       <!--
       -->
@@ -218,9 +218,9 @@
         >> DONACIONES
         <br>
         <br>
-        El evento solidario de las plataformas sonoras experimentales N01SE global y Aural por y para mujeres creativas y artistas independientes.
+        Todo lo recaudado ir&aacute; destinado &iacute;ntegramente a la asociaci&oacute;n de mujeres y acci&oacute;n social situada en el mismo barrio de Carabanchel, Mujeres Opa&ntilde;el. (@mujeresopanel <a href="https://amo.org.es/">https://amo.org.es/</a>  ).
       </p>
-      <div class="button" onclick="window.open('https://paypal.me/pools/c/8xmEdGQL5l','Donation');" style="cursor: pointer;">Donate here!
+      <div class="button" onclick="window.open('https://paypal.me/pools/c/8xmEdGQL5l','Donation');" style="cursor: pointer;">Dona aqu&iacute;!
         </div>
 
       <!--
