--- a/schedule.html
+++ b/schedule.html
@@ -52,7 +52,7 @@
     </div>
 
 
-    <div class="programa" style="background-image: url('img_noise/empty.png'); background-size: 100%;">
+    <div class="programa" style="background-image: url('img_noise/ilcolective.jpg'); background-size: 100%;">
         
       <div class="programa-header">
           <p class="hora-programa">Slow Fashion</p>
