--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>10:00 - 10:45</p>
             <h3>somos Lilith</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>Recopilaci&oacute;n de discursos y reivindicaciones desde distintas miradas de mujeres referentes para empezar la jornada pre-8M.</p></div>
           </div>
         </div>
 
@@ -172,7 +172,9 @@
             <p>18:00 - 18:50</p>
             <h3>raxet1 + jvliana</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>raxet1 es una cantante y compositora de Madrid. Comienza su actividad creativa como raxet1 en 2016, s&iacute; bien antes como Albahacassette (su heter&oacute;nimo) ya ven&iacute;a componiendo bajo otra l&iacute;rica m&aacute;s formal. Canciones de guitarra y dobles voces con un contenido que tiene que ver con revelaciones sobre El Otro, el Amor, el Poder y otros intercambios.
+            </p>
+            <p>Jvliana es cantante y compositora asturiana. Sentimiento y un sonido brumoso. Voz verde oscuro. Durante a&ntilde;os compartiendo canciones propias y versiones en la jungla de SoundCloud (2015 - 2021). Actualmente trabajando en un &aacute;lbum-semilla folcl&oacute;rico, indie y muy propio</p></div>
           </div>
         </div>
 
@@ -187,12 +189,12 @@
         </div>
 
         <div class="info-time" inicio="19:40" fin="20:30">
-          <img class="info-imagen" src="img_noise/empty.png" alt="">
+          <img class="info-imagen" src="img_noise/landa.jfif" alt="">
           <div class="info-texto">
             <p>19:40 - 20:30</p>
             <h3>LNDA</h3>
             <br>
-            <div class="info-texto-descripcion"><p>Café con Chloe es un programa matutino en el que descubriremos música brasileña de la mano de Chloe. Búscala en ig cómo @chloe_conh</p></div>
+            <div class="info-texto-descripcion"><p>LNDA es cofundadora de Escaparate 14/38. Nos trae una sesi&oacute;n de eclecticismo electr&oacute;nico, una reminiscencia del club desde casa. Otra manera de experimentar el club y la fiesta. Desde la distancia y la pausa.</p></div>
           </div>
         </div>
 
